tree-sitter-ambient/grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $.function_definition,
        $.extern_function_definition,
        $.const_definition,
        $.type_definition,
        $.struct_definition,
        $.enum_definition,
        $.ability_definition,
        $.trait_definition,
        $.impl_definition,
        $.use_declaration
      ),

    // ─────────────────────────────────────────────────────────────────────────
    // Declarations
    // ─────────────────────────────────────────────────────────────────────────

    function_definition: ($) =>
      seq(
        optional($.visibility),
        "fn",
        field("name", $.identifier),
        optional($.type_parameters),
        $.parameter_list,
        optional(seq(":", field("return_type", $._type))),
        optional($.ability_clause),
        field("body", $.block)
      ),

    // `extern fn` declares a body-less signature implemented by the host;
    // it ends with `;` and takes no ability clause (extern fns are pure).
    extern_function_definition: ($) =>
      seq(
        optional($.visibility),
        "extern",
        "fn",
        field("name", $.identifier),
        optional($.type_parameters),
        $.parameter_list,
        optional(seq(":", field("return_type", $._type))),
        ";"
      ),

    const_definition: ($) =>
      seq(
        optional($.visibility),
        "const",
        field("name", $.identifier),
        ":",
        field("type", $._type),
        "=",
        field("value", $._expression),
        ";"
      ),

    type_definition: ($) =>
      seq(
        optional($.visibility),
        "type",
        field("name", $.identifier),
        optional($.type_parameters),
        "=",
        field("type", $._type),
        ";"
      ),

    struct_definition: ($) =>
      seq(
        optional($.visibility),
        // `extern` marks an engine-provided type: nameable and readable, but
        // not constructable by user code. It requires `unique(...)`; the
        // lowering pass enforces that.
        optional("extern"),
        optional($.unique_modifier),
        "struct",
        field("name", $.identifier),
        optional($.type_parameters),
        // A record body `{ ... }`, or `;` for a unit struct. The compiler's
        // lowering pass enforces the `unique(...)`-required and non-empty rules.
        choice($.record_type_body, ";")
      ),

    unique_modifier: ($) => seq("unique", "(", $.uuid, ")"),

    // UUID literals are uppercase-only (canonical 8-4-4-4-12 hex). Lowercase
    // hex is reserved for identifiers/numbers, matching the compiler's lexer.
    uuid: ($) =>
      /[0-9A-F]{8}-[0-9A-F]{4}-[0-9A-F]{4}-[0-9A-F]{4}-[0-9A-F]{12}/,

    enum_definition: ($) =>
      seq(
        optional($.visibility),
        optional($.unique_modifier),
        "enum",
        field("name", $.identifier),
        optional($.type_parameters),
        "{",
        optional($.enum_variant_list),
        "}"
      ),

    enum_variant_list: ($) =>
      seq($.enum_variant, repeat(seq(",", $.enum_variant)), optional(",")),

    enum_variant: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("(", optional($._type_list), ")"))
      ),

    // Abilities are nominal: the `unique(<uuid>)` prefix is the identity
    // (mandatory, like `enum`; the lowering pass enforces it). Every method
    // carries a default implementation body; only the reserved Exception
    // carve-out stays abstract with a `;`.
    ability_definition: ($) =>
      seq(
        optional($.visibility),
        optional($.unique_modifier),
        "ability",
        field("name", $.identifier),
        optional($.type_parameters),
        optional($.ability_dependency),
        "{",
        repeat($.ability_method),
        "}"
      ),

    ability_dependency: ($) => seq("with", $.identifier_list),

    ability_method: ($) =>
      seq(
        "fn",
        field("name", $.identifier),
        optional($.type_parameters),
        $.parameter_list,
        ":",
        field("return_type", $._type),
        // A block is the method's default implementation; a `;` leaves it
        // abstract (the Exception carve-out).
        choice(field("body", $.block), ";")
      ),

    // Traits declare shared behavior as a set of method signatures. Method
    // bodies live in `impl` blocks, so a trait method looks like an ability
    // method: `fn name(self, other: Self): Ret;`.
    trait_definition: ($) =>
      seq(
        optional($.visibility),
        "trait",
        field("name", $.identifier),
        optional($.type_parameters),
        "{",
        repeat($.trait_method),
        "}"
      ),

    trait_method: ($) =>
      seq(
        "fn",
        field("name", $.identifier),
        optional($.type_parameters),
        $.parameter_list,
        ":",
        field("return_type", $._type),
        ";"
      ),

    // `impl Trait for Type { ... }` provides a trait's methods; `impl Type
    // { ... }` (no `for`) attaches inherent methods directly. Both may be
    // generic over the target's type parameters (`impl<T> Option<T> { ... }`).
    impl_definition: ($) =>
      seq(
        "impl",
        optional($.type_parameters),
        optional(seq(field("trait", $._type), "for")),
        field("type", $._type),
        "{",
        repeat($.function_definition),
        "}"
      ),

    use_declaration: ($) => seq(optional($.visibility), "use", $.use_path, ";"),

    use_path: ($) =>
      seq(
        $.identifier,
        repeat(seq("::", $.identifier)),
        optional(choice(seq("::", "*"), seq("::", $.use_group)))
      ),

    use_group: ($) => seq("{", $.identifier_list, "}"),

    // ─────────────────────────────────────────────────────────────────────────
    // Parameters and Types
    // ─────────────────────────────────────────────────────────────────────────

    visibility: ($) => "pub",

    parameter_list: ($) =>
      seq("(", optional(seq($.parameter, repeat(seq(",", $.parameter)))), ")"),

    parameter: ($) =>
      seq(field("name", $.identifier), optional(seq(":", field("type", $._type)))),

    type_parameters: ($) =>
      seq("<", $.type_parameter, repeat(seq(",", $.type_parameter)), ">"),

    type_parameter: ($) => seq($.identifier, optional("!")),

    ability_clause: ($) => seq("with", $._ability_list),

    _ability_list: ($) =>
      prec.left(seq($._ability_ref, repeat(seq(",", $._ability_ref)))),

    _type: ($) =>
      choice(
        $.identifier,
        $.generic_type,
        $.function_type,
        $.tuple_type,
        $.record_type,
        $.ability_type,
        $.handler_type,
        $.unit_type,
        $.never_type,
        $.infer_type
      ),

    never_type: ($) => "!",

    infer_type: ($) => "_",

    generic_type: ($) =>
      seq($.identifier, "<", $._type_list, ">"),

    record_type_body: ($) => seq("{", optional($.record_type_fields), "}"),

    record_type_fields: ($) =>
      seq($.record_type_field, repeat(seq(",", $.record_type_field)), optional(",")),

    record_type_field: ($) =>
      seq(field("name", $.identifier), ":", field("type", $._type)),

    unit_type: ($) => seq("(", ")"),

    _type_list: ($) => seq($._type, repeat(seq(",", $._type))),

    _expression: ($) =>
      choice(
        $.identifier,
        $.number,
        $.string,
        $.boolean,
        $.unit,
        $.binary_expression,
        $.unary_expression,
        $.call_expression,
        $.perform_expression,
        $.scoped_identifier,
        $.member_expression,
        $.tuple_index_expression,
        $.index_expression,
        $.if_expression,
        $.match_expression,
        $.block,
        $.lambda,
        $.tuple,
        $.list_literal,
        $.record_literal,
        $.with_handle_expression,
        $.sandbox_expression,
        $.handler_literal,
        $.parenthesized_expression
      ),

    binary_expression: ($) =>
      choice(
        prec.left(PREC.OR, seq($._expression, "||", $._expression)),
        prec.left(PREC.AND, seq($._expression, "&&", $._expression)),
        prec.left(
          PREC.COMPARE,
          seq(
            $._expression,
            choice("==", "!=", "<", "<=", ">", ">="),
            $._expression
          )
        ),
        prec.left(PREC.ADD, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(
          PREC.MULT,
          seq($._expression, choice("*", "/", "%"), $._expression)
        )
      ),

    call_expression: ($) =>
      prec(PREC.CALL, seq($._expression, $.argument_list)),

    argument_list: ($) =>
      seq(
        "(",
        optional(seq($._expression, repeat(seq(",", $._expression)))),
        ")"
      ),

    perform_expression: ($) => prec(PREC.PERFORM, seq($._expression, "!")),

    // Namespace / path access uses `::` (`core::math::abs`, `platform::Fs`).
    scoped_identifier: ($) =>
      prec(
        PREC.MEMBER,
        seq(
          field("path", choice($.identifier, $.scoped_identifier)),
          "::",
          field("name", $.identifier)
        )
      ),

    // Value member access uses `.` (`record.field`).
    member_expression: ($) =>
      prec(PREC.MEMBER, seq($._expression, ".", $.identifier)),

    block: ($) => seq("{", repeat($._statement), optional($._expression), "}"),

    _statement: ($) => choice($.let_statement, $.expression_statement),

    unit: ($) => seq("(", ")"),

    // ─────────────────────────────────────────────────────────────────────────
    // Literals
    // ─────────────────────────────────────────────────────────────────────────

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    number: ($) => /\d+(\.\d+)?/,

    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $.string_content,
            $.escape_sequence,
            $.string_interpolation
          )
        ),
        '"'
      ),

    // A run of ordinary characters, or a lone `$` that does not open an
    // interpolation. The `${` case is claimed by string_interpolation, which
    // wins by longest-match, so a bare `$` (even right before the closing
    // quote, as in "$") stays literal text.
    string_content: ($) => /[^"\\$]+|\$/,

    boolean: ($) => choice("true", "false"),

    // Doc comments (/// for items, //! for modules)
