tree-sitter-ambient/test/corpus/declarations.txt
================================================================================
Simple function
================================================================================

fn add(x: number, y: number): number {
  x + y
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (identifier))
      (parameter
        name: (identifier)
        type: (identifier)))
    return_type: (identifier)
    body: (block
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Public function
================================================================================

pub fn main(): () {
  42
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (visibility)
    name: (identifier)
    (parameter_list)
    return_type: (unit_type)
    body: (block
      (number))))

================================================================================
Function with abilities
================================================================================

fn read_file(path: string): string
  with Filesystem
{
  Filesystem.read!(path)
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (identifier)))
    return_type: (identifier)
    (ability_clause
      (identifier))
    body: (block
      (call_expression
        (perform_expression
          (member_expression
            (identifier)
            (identifier)))
        (argument_list
          (identifier))))))

================================================================================
Extern function
================================================================================

extern fn sqrt(x: number): number;

--------------------------------------------------------------------------------

(source_file
  (extern_function_definition
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (identifier)))
    return_type: (identifier)))

================================================================================
Public extern function
================================================================================

pub extern fn now(): number;

--------------------------------------------------------------------------------

(source_file
  (extern_function_definition
    (visibility)
    name: (identifier)
    (parameter_list)
    return_type: (identifier)))

================================================================================
Const definition
================================================================================

const PI: number = 3.14159;

--------------------------------------------------------------------------------

(source_file
  (const_definition
    name: (identifier)
    type: (identifier)
    value: (number)))

================================================================================
Enum definition
================================================================================

enum Option<T> {
  Some(T),
  None,
}

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier)))
    (enum_variant_list
      (enum_variant
        name: (identifier)
        (identifier))
      (enum_variant
        name: (identifier)))))

================================================================================
Ability definition
================================================================================

unique(D098767B-4093-4D5C-BA37-AD92AA7B5D98) ability Console {
  fn print(message: string): () {
    write(message)
  }
}

--------------------------------------------------------------------------------

(source_file
  (ability_definition
    (unique_modifier
      (uuid))
    name: (identifier)
    (ability_method
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (identifier)))
      return_type: (unit_type)
      body: (block
        (call_expression
          (identifier)
          (argument_list
            (identifier)))))))

================================================================================
Ability with dependency
================================================================================

unique(D098767B-4093-4D5C-BA37-AD92AA7B5D99) ability Log
  with core::system::Stdio
{
  fn info(message: string): () {
    core::system::Stdio::out(message)
  }
}

--------------------------------------------------------------------------------

(source_file
  (ability_definition
    (unique_modifier
      (uuid))
    name: (identifier)
    (ability_dependency
      (scoped_identifier
        path: (scoped_identifier
          path: (identifier)
          name: (identifier))
        name: (identifier)))
    (ability_method
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (identifier)))
      return_type: (unit_type)
      body: (block
        (call_expression
          (scoped_identifier
            path: (scoped_identifier
              path: (scoped_identifier
                path: (identifier)
                name: (identifier))
              name: (identifier))
            name: (identifier))
          (argument_list
            (identifier)))))))

================================================================================
Use declaration
================================================================================

use some_library::mod::{a, b};

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (use_tree
      path: (use_path
        (identifier)
        (identifier))
      (use_group
        (use_tree
          path: (use_path
            (identifier)))
        (use_tree
          path: (use_path
            (identifier)))))))

================================================================================
Nested use tree with alias and glob
================================================================================

use pkg::{
    math_utils::{abs, max as largest},
    geometry::*,
};

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (use_tree
      path: (use_path
        (identifier))
      (use_group
        (use_tree
          path: (use_path
            (identifier))
          (use_group
            (use_tree
              path: (use_path
                (identifier)))
            (use_tree
              path: (use_path
                (identifier))
              alias: (identifier))))
        (use_tree
          path: (use_path
            (identifier)))))))

================================================================================
Block-scoped use statement
================================================================================

fn f(): Number {
  use core::convert::parse_number;
  parse_number("4")
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (use_declaration
        (use_tree
          path: (use_path
            (identifier)
            (identifier)
            (identifier))))
      (call_expression
        (identifier)
        (argument_list
          (string
            (string_content)))))))

================================================================================
Struct definition with unique
================================================================================

unique(D098767B-4093-4D5C-BA37-AD92AA7B5D98) struct UserId {
  value: string,
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    (unique_modifier
      (uuid))
    name: (identifier)
    (record_type_body
      (record_type_fields
        (record_type_field
          name: (identifier)
          type: (identifier))))))

================================================================================
Unit struct
================================================================================

unique(F6A7B8C9-D0E1-2345-FABC-456789012345) struct Marker;

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    (unique_modifier
      (uuid))
    name: (identifier)))

================================================================================
Extern struct
================================================================================

extern unique(F6A7B8C9-D0E1-2345-FABC-456789012345) struct Handle {
  id: int,
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    (unique_modifier
      (uuid))
    name: (identifier)
    (record_type_body
      (record_type_fields
        (record_type_field
          name: (identifier)
          type: (identifier))))))

================================================================================
Struct definition
================================================================================

struct Point {
  x: int,
  y: int,
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)
    (record_type_body
      (record_type_fields
        (record_type_field
          name: (identifier)
          type: (identifier))
        (record_type_field
          name: (identifier)
          type: (identifier))))))

================================================================================
Type alias
================================================================================

type Celsius = float;

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (identifier)))

================================================================================
Never type
================================================================================

fn diverge(): ! {
  panic()
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (never_type)
    body: (block
      (call_expression
        (identifier)
        (argument_list)))))

================================================================================
Infer type
================================================================================

fn test(): _ {
  42
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (infer_type)
    body: (block
      (number))))

================================================================================
Public nominal enum
================================================================================

pub unique(FFFFFFFF-FFFF-FFFF-FFFF-FFFFFFFFFF01) enum Option<T> {
  None,
  Some(T),
}

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    (visibility)
    (unique_modifier
      (uuid))
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier)))
    (enum_variant_list
      (enum_variant
        name: (identifier))
      (enum_variant
        name: (identifier)
        (identifier)))))

================================================================================
Public re-export
================================================================================

pub use pkg::option::{Option};

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (visibility)
    (use_tree
      path: (use_path
        (identifier)
        (identifier))
      (use_group
        (use_tree
          path: (use_path
            (identifier)))))))

================================================================================
Public const and ability
================================================================================

pub const LIMIT: number = 10;

pub unique(D098767B-4093-4D5C-BA37-AD92AA7B5D9A) ability Telemetry {
  fn record(event: string): () {
    ()
  }
}

--------------------------------------------------------------------------------

(source_file
  (const_definition
    (visibility)
    name: (identifier)
    type: (identifier)
    value: (number))
  (ability_definition
    (visibility)
    (unique_modifier
      (uuid))
    name: (identifier)
    (ability_method
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (identifier)))
      return_type: (unit_type)
      body: (block
        (unit)))))

================================================================================
Abstract ability method (Exception carve-out)
================================================================================

pub unique(FFFFFFFF-FFFF-FFFF-FFFD-000000000001) ability Exception {
  fn throw(message: String): !;
}

--------------------------------------------------------------------------------

(source_file
  (ability_definition
    (visibility)
    (unique_modifier
      (uuid))
    name: (identifier)
    (ability_method
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (identifier)))
      return_type: (never_type))))

================================================================================
Trait definition
================================================================================

trait Show {
  fn show(self): string;
}

--------------------------------------------------------------------------------

(source_file
  (trait_definition
    name: (identifier)
    (trait_method
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)))
      return_type: (identifier))))

================================================================================
Public trait with associated function
================================================================================

pub trait Default {
  fn default(): Self;
}

--------------------------------------------------------------------------------

(source_file
  (trait_definition
    (visibility)
    name: (identifier)
    (trait_method
      name: (identifier)
      (parameter_list)
      return_type: (identifier))))

================================================================================
Trait impl
================================================================================

impl Show for Money {
  fn show(self): string {
    to_string(self.cents)
  }
}

--------------------------------------------------------------------------------

(source_file
  (impl_definition
    trait: (identifier)
    type: (identifier)
    (function_definition
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)))
      return_type: (identifier)
      body: (block
        (call_expression
          (identifier)
          (argument_list
            (member_expression
              (identifier)
              (identifier))))))))

================================================================================
Inherent impl
================================================================================

impl Money {
  fn double(self): number {
    self.cents * 2
  }
}

--------------------------------------------------------------------------------

(source_file
  (impl_definition
    type: (identifier)
    (function_definition
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)))
      return_type: (identifier)
      body: (block
        (binary_expression
          (member_expression
            (identifier)
            (identifier))
          (number))))))

================================================================================
Generic inherent impl
================================================================================

impl<T> Option<T> {
  fn get_or(self, fallback: T): T {
    fallback
  }
}

--------------------------------------------------------------------------------

(source_file
  (impl_definition
    (type_parameters
      (type_parameter
        name: (identifier)))
    type: (generic_type
      (identifier)
      (identifier))
    (function_definition
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier))
        (parameter
          name: (identifier)
          type: (identifier)))
      return_type: (identifier)
      body: (block
        (identifier)))))

================================================================================
Generic trait with unique identity
================================================================================

pub unique(FFFFFFFF-FFFF-FFFF-FFFF-FFFFFFFF0019) trait From<T> {
  fn from(value: T): Self;
}

--------------------------------------------------------------------------------

(source_file
  (trait_definition
    (visibility)
    (unique_modifier
      (uuid))
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier)))
    (trait_method
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (identifier)))
      return_type: (identifier))))

================================================================================
Impl with trait type argument
================================================================================

impl From<Number> for Money {
  fn from(value: Number): Money {
    value
  }
}

--------------------------------------------------------------------------------

(source_file
  (impl_definition
    trait: (generic_type
      (identifier)
      (identifier))
    type: (identifier)
    (function_definition
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (identifier)))
      return_type: (identifier)
      body: (block
        (identifier)))))

================================================================================
Generic impl with nested trait type argument
================================================================================

impl<T> From<List<T>> for Wrap<T> {
  fn from(value: List<T>): Wrap<T> {
    value
  }
}

--------------------------------------------------------------------------------

(source_file
  (impl_definition
    (type_parameters
      (type_parameter
        name: (identifier)))
    trait: (generic_type
      (identifier)
      (generic_type
        (identifier)
        (identifier)))
    type: (generic_type
      (identifier)
      (identifier))
    (function_definition
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (generic_type
            (identifier)
            (identifier))))
      return_type: (generic_type
        (identifier)
        (identifier))
      body: (block
        (identifier)))))

================================================================================
Bounded type parameter with trait type argument
================================================================================

fn pay<T: Into<Money>>(x: T): Number {
  0
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier)
        (trait_bounds
          (trait_bound
            name: (identifier)
            (identifier)))))
    (parameter_list
      (parameter
        name: (identifier)
        type: (identifier)))
    return_type: (identifier)
    body: (block
      (number))))

================================================================================
Multiple bounds joined with plus
================================================================================

fn cmp<T: Eq + Ord>(a: T, b: T): Bool {
  true
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier)
        (trait_bounds
          (trait_bound
            name: (identifier))
          (trait_bound
            name: (identifier)))))
    (parameter_list
      (parameter
        name: (identifier)
        type: (identifier))
      (parameter
        name: (identifier)
        type: (identifier)))
    return_type: (identifier)
    body: (block
      (boolean))))

================================================================================
Where clause with trait type argument
================================================================================

fn convert<T>(x: T): T
  where T: From<String>
{
  x
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier)))
    (parameter_list
      (parameter
        name: (identifier)
        type: (identifier)))
    return_type: (identifier)
    (where_clause
      (where_predicate
        type: (identifier)
        (trait_bounds
          (trait_bound
            name: (identifier)
            (identifier)))))
    body: (block
      (identifier))))

================================================================================
Trait with an associated type
================================================================================

unique(FFFFFFFF-FFFF-FFFF-FFFF-FFFFFFFF001B) trait TryFrom<T> {
  type Error;
  fn try_from(value: T): Result<Self, Self::Error>;
}

--------------------------------------------------------------------------------

(source_file
  (trait_definition
    (unique_modifier
      (uuid))
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier)))
    (associated_type
      name: (identifier))
    (trait_method
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (identifier)))
      return_type: (generic_type
        (identifier)
        (identifier)
        (scoped_identifier
          path: (identifier)
          name: (identifier))))))

================================================================================
Impl with an associated type binding
================================================================================

impl TryFrom<String> for Number {
  type Error = String;
  fn try_from(value: String): Result<Number, String> { Err(value) }
}

--------------------------------------------------------------------------------

(source_file
  (impl_definition
    trait: (generic_type
      (identifier)
      (identifier))
    type: (identifier)
    (associated_type
      name: (identifier)
      type: (identifier))
    (function_definition
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (identifier)))
      return_type: (generic_type
        (identifier)
        (identifier)
        (identifier))
      body: (block
        (call_expression
          (identifier)
          (argument_list
            (identifier)))))))
